Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18842

Unfortunate error message when the same column is used for application period start and end

    XMLWordPrintable

Details

    Description

      10.4 1bcb66c5

      MariaDB [test]> create or replace table t1 (a datetime, b datetime, period for apt(a,a));
      ERROR 1054 (42S22): Unknown column 'a' in 'apt'
      

      Attachments

        Activity

          People

            nikitamalyavin Nikita Malyavin
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.