MDEV-18842: Unfortunate error message when the same column is used for application period start and end

An application-time period must be composed of two different columns.
We added a check that ensures that the above condition is met.